# gh-shaping

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: pr.yml  release.yml
src/: auditor.rs  cli.rs  error.rs  interactive.rs  main.rs  orchestrator.rs  pinner.rs  resolver.rs  updater.rs  workflow.rs
