[package]
name        = "cargo-gh-shaping"
description = "Small commandline tool for pinning github actions to commit shas instead of using mutable tags"
homepage    = "https://github.com/lfarrel6/gh-shaping"
license     = "MIT"
version     = "0.3.0"
edition     = "2024"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror  = "2"
regex      = "1"
ratatui    = "0.30"
crossterm  = "0.29"
